src/ui/canvas/StepDisplay.css
.step {
    border-radius: 0.5em;
    background-color: #ccc;
    display: inline-flex;
    flex-direction: column;
    padding: 0;
    position: absolute;
    user-select: none;
    border: solid black 1px;
    overflow: hidden;
}

.step__header {
    padding: 0.2em 0;
    display: flex;
    cursor: move;
    border-bottom: solid black 1px;
    height: 24px;
}

.step--focused.step--invalid {
    border-color: #a00;
    box-shadow: 0 0 12pt 1pt #a00;
}

.step--focused.step--invalid .step__header {
    border-bottom-color: #a00;
}

.step--user .step__header {
    background-color: #00aaaa;
}

.step--system .step__header {
    background-color: #cc8800;
}

.step--start .step__header {
    background-color: #00aa00;
}

.step--stop .step__header {
    background-color: #ff3333;
}

.step__icon {
    width: 1.3em;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    font-weight: bold;
    color: rgba(0, 0, 0, 0.5);
}

.step--user .step__icon::before {
    content: 'U';
}

.step--system .step__icon::before {
    content: 'S';
}

.step--start .step__icon::before {
    content: '\25B6';
    font-size: 0.7em;
}

.step--stop .step__icon::before {
    content: '\25A0';
}

.step__processName {
    color: white;
    font-weight: bold;
    padding: 0 1em 0 0;
    text-shadow: 0px 0px 4px black;
}

.step--readonly .step__processName {
    color: grey;
}

.step__connectors {
    display: flex;
    justify-content: space-between;
}

.step__betweenConnectors {
    width: 0.5em;
}

.step__outConnectors {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.step__connector {
    cursor: pointer;
    font-style: italic;
    height: 24px;
}

.step__connector--in, .step__connector:last-of-type {
    height: 23px;
}

.step__connector--in {
    align-self: flex-start;
}

.step__connector::after {
    margin-left: 0.25em;
    width: 1.5em;
    height: 1.5em;
    color: white;
    font-weight: bold;
    font-style: normal;
    text-shadow: 0px 0px 1px black;

    content: '\25B7';
}

.step__connector--focused,
.step__connector--focused::after,
.step__returnPathName--focused,
.parameter--focused.parameter--invalid .parameter__name /* should be in ParameterDisplay.css */ {
    animation-name: throbError;
    animation-duration: 0.75s;
    animation-direction: alternate;
    animation-iteration-count: infinite;
}

.step__connector--connected::after {
    content: '\25B6';
}

.step__parameters {
    display: flex;
    justify-content: space-between;
}

.step__parameters:not(:empty) {
    padding: 0;
}

.step__inputs, .step__outputs {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
}

.step__inputs:not(:last-child) {
    border-right: solid #666666 1px;
}

.step__inputs {
    padding-right: 1em;
}

.step__outputs {
    padding-left: 0.5em;
}

.step__returnPathName {
    font-style: italic;
    position: relative;
    top: 0.15em;
    right: 0.3em;
}

@keyframes throbError {
    from {
        color: #f00;
        text-shadow: 0px 0px 4px white;
    }
    to {
    }
}

